# tauri-egui

./: CHANGELOG.md  Cargo.toml  LICENSE.spdx  README.md
.cargo/: audit.toml
.changes/: config.json  deps.md  export-window.md  initial-release.md  v2.md  v2alpha4.md
.github/workflows/: covector-version-or-publish.yml  lint.yml  test.yml
examples/basic/: index.html  main.rs  tauri.conf.json
examples/demo/: main.rs  tauri.conf.json
examples/egui_demo_app/: Cargo.toml  README.md
examples/egui_demo_app/src/: backend_panel.rs  frame_history.rs  lib.rs  main.rs  wrap_app.rs
examples/egui_demo_app/src/apps/: custom3d_glow.rs  custom3d_wgpu.rs  fractal_clock.rs  http_app.rs
examples/egui_demo_lib/: Cargo.toml
examples/egui_demo_lib/benches/: benchmark.rs
examples/egui_demo_lib/src/: color_test.rs  lib.rs  syntax_highlighting.rs
examples/egui_demo_lib/src/demo/: about.rs  code_editor.rs  code_example.rs  context_menu.rs  dancing_strings.rs  demo_app_windows.rs  drag_and_drop.rs  font_book.rs  layout_test.rs  misc_demo_window.rs  mod.rs  multi_touch.rs  paint_bezier.rs  painting.rs  password.rs  plot_demo.rs  scrolling.rs  sliders.rs  strip_demo.rs  table_demo.rs  tests.rs  text_edit.rs  toggle_switch.rs  widget_gallery.rs  window_options.rs  window_with_panels.rs
examples/egui_demo_lib/src/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs
src/: egui_impl.rs  lib.rs  plugin.rs  run.rs
src/plugin/: window.rs
