[package]
name = "tauri-egui"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://tauri.app"
categories = [ "gui", "tauri" ]
description = "A Tauri plugin for the egui library"

[dependencies]
thiserror = "1"
tauri = "=2.0.0-alpha.4"
tauri-runtime = "=0.13.0-alpha.2"
tauri-runtime-wry = "=0.13.0-alpha.2"
egui = "0.19"
eframe = { package = "eframe_tao", version = "0.22.0" }
egui-winit = { package = "egui-tao", version = "0.22.0" }
egui_glow = { package = "egui_glow_tao", version = "0.22.0" }
glutin = { package = "glutin_tao", version = "0.32.0" }
glow = "0.11"
rand = "0.8"
raw-window-handle = "0.5"

[dev-dependencies]
tauri = { version = "=2.0.0-alpha.4"}
egui_demo_app = { path = "examples/egui_demo_app" }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.16", features = [ "v3_24" ] }

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[workspace]
members = [ "examples/egui_demo_app", "examples/egui_demo_lib" ]
